--- a/assets/CSS/app.css
+++ b/assets/CSS/app.css
@@ -26,7 +26,8 @@ header {
 
 #allScores,
 #start,
-.answerBtn {
+.answerBtn,
+#submitBtn {
   font-size: 1rem;
   background-color: #ef233c;
   color: #edf2f4;
@@ -38,7 +39,8 @@ header {
 }
 
 #allScores:hover,
-#start:hover {
+#start:hover,
+#submitBtn:hover {
   background-color: #d90429;
   box-shadow: 0 0 0.5em #d90429;
 }
@@ -165,6 +167,26 @@ main {
   color: rgba(69, 123, 157, 0.856);
   line-height: 1.5em;
   letter-spacing: 0.1em;
+}
+
+#scoreInputContainer {
+  position: relative;
+  top: 25%;
+}
+
+.initialsContainer {
+  margin: 1em auto 0;
+}
+
+#initialsInput {
+  border: 0.1em solid #faebd7;
+  border-radius: 0.3em;
+  background-color: rgba(250, 235, 215, 0.5);
+}
+
+#initialsInput:focus {
+  outline: none;
+  border-right: 0.3em solid rgba(69, 123, 157, 0.8);
 }
 
 footer {
