--- a/assets/CSS/app.css
+++ b/assets/CSS/app.css
@@ -46,7 +46,7 @@ header {
 #goBackBtn:hover,
 #clearBtn:hover {
   background-color: #d90429;
-  box-shadow: 0 0 0.5em #d90429;
+  box-shadow: 0 0 0.5em rgba(217, 4, 39, 0.9);
 }
 
 #timerContainer {
@@ -78,7 +78,6 @@ h1 {
 }
 
 .subtitle {
-  font-size: 1.5rem;
   margin: 0.3em;
   padding: 0.3em;
   line-height: 1.2em;
@@ -108,7 +107,7 @@ main {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  border: 0.2em solid rgba(168, 218, 220, 0.4);
+  border: 0.2em solid rgba(168, 218, 220, 0.55);
   border-radius: 0.5em;
   box-shadow: 0 0 1em 0.1em rgba(168, 218, 220, 0.4);
 }
@@ -228,4 +227,36 @@ footer {
   color: #6a040f;
   padding: 0.5em;
   text-align: center;
+}
+
+@media only screen and (max-width: 650px) {
+  header {
+    font-size: 1rem;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  #qaContainer,
+  #scoreInputContainer,
+  #highscoresContainer {
+    width: 80%;
+  }
+
+  #allScores,
+  #start,
+  .answerBtn,
+  #submitBtn,
+  #goBackBtn,
+  #clearBtn,
+  #questionTxt,
+  #scoreInputContainer,
+  #highscoresContainer,
+  #feedback,
+  #initialsInput,
+  #highscoresList,
+  #highscoresTxt {
+    font-size: 0.8rem;
+  }
 }
